--- a/php_laravel/docker/container/php/Dockerfile
+++ b/php_laravel/docker/container/php/Dockerfile
@@ -9,6 +9,12 @@ RUN apt-get update
 RUN apt-get -y install git zip unzip vim
 RUN docker-php-ext-install pdo_mysql
 
+RUN mkdir -p /var/www/html/storage/framework/cache/data && \
+    mkdir -p /var/www/html/storage/framework/sessions && \
+    mkdir -p /var/www/html/storage/framework/views && \
+    mkdir -p /var/www/html/storage/framework/testing && \
+    chmod -R 777 /var/www/html/storage
+    
 # composerのインストール
 RUN cd /usr/bin && curl -s http://getcomposer.org/installer | php && ln -s /usr/bin/composer.phar /usr/bin/composer
 
