--- a/nodejs_vue/docker/docker-compose.yml
+++ b/nodejs_vue/docker/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     - HOST=0.0.0.0
     - port=3000
     - CHOKIDAR_USEPOLLING=true
-    command: sh -c "yarn && yarn dev"
+    # command: sh -c "yarn && yarn dev"
 
   # DBサーバー
   vue-db:
